--- a/.project.json
+++ b/.project.json
@@ -6,7 +6,7 @@
   "build": {
     "targetFolder": "dist",
     "sourceFolder": "webapp",
-    "buildRequired": false,
+    "buildRequired": true,
     "lastBuildDateTime": "Sun, 12 Nov 2017 16:16:58 GMT"
   },
   "generation": [
