fix #1 issue applied. Thx Gregor

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -68,7 +68,7 @@
 				"dataSource": "catalogService",
 				"settings": {
 					"defaultCountMode": "Inline",
-					"useBatch": true
+					"useBatch": false
 				},
 				"preload": true
 			}
